# test

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CLANG_TIDY_FIXES.md  CMakeLists.txt  CMakePresets.json  CODE_QUALITY_SETUP.md  CONTRIBUTING.md  Dockerfile  Doxyfile.in  GITHUB_WORKFLOW_FIXES.md  README.md  conanfile.txt  docker-compose.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: code-quality.yml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-helper.sh
include/: app.h
scripts/: build.sh  code-quality.sh  docker-build.sh  run.sh
src/: app.cpp  main.cpp
